@@ -13,6 +13,7 @@ CHANGES
     * paster quiet option handled correctly
     * distribute instead of setuptools
     * cheetah requirement fix because of ugly zopeskel version pinning
+    * add facultystaff to plone3
 
 1.3.51
 -------
